Fixed majority of the div containers and text to not go ouotside of the screen or from overlapping each other

--- a/assets/css/navbar-component.css
+++ b/assets/css/navbar-component.css
@@ -47,7 +47,7 @@ a.logo{
     margin-top: 23px;
     flex-direction: column;
     position: static;
-    height: 180px;
+    height: 100px;
   }
 
   .nav-bar a.nav-link {
